--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -48,15 +48,16 @@
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe 50%,
-    #47caff 50%
+    #47caff 50%,
   );
   --vp-home-hero-image-filter: blur(40px);
 }
 
 @media (min-width: 640px) {
   :root {
-    --vp-home-hero-image-filter: blur(56px);
+    --vp-home-hero-image-filter: blur(56px); 
   }
+  
 }
 
 @media (min-width: 960px) {
